--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,11 @@
+/**
+font-family: 'Charmonman', cursive;
+font-family: 'Indie Flower', cursive;
+font-family: 'Anton', sans-serif;
+ */
+
 h1 {
+	font-family: 'Anton', sans-serif;
 	color: green;
 }
 
@@ -35,4 +42,18 @@ h1 {
 [data-li~="h"] {
 	font-size: 80px;
 	color: aqua;
+}
+
+.font-indie-flower {
+	font-family: 'Indie Flower', cursive;
+	line-height: normal;
+}
+
+.font-charmonman {
+	font-family: 'Charmonman', cursive;
+	line-height: normal;
+}
+
+.line-height {
+	line-height: normal;
 }
